compiler/testData/diagnostics/tests/multiplatform/headerClass/superClass.kt
// IGNORE_FIR_DIAGNOSTICS
// RUN_PIPELINE_TILL: FIR2IR
// MODULE: m1-common
// FILE: common.kt

interface <!PACKAGE_OR_CLASSIFIER_REDECLARATION!>I<!>
open class <!PACKAGE_OR_CLASSIFIER_REDECLARATION!>C<!>
interface <!PACKAGE_OR_CLASSIFIER_REDECLARATION!>J<!>

expect class <!PACKAGE_OR_CLASSIFIER_REDECLARATION!>Foo<!> : I, C, J

expect class <!PACKAGE_OR_CLASSIFIER_REDECLARATION!>Bar<!> : <!SUPERTYPE_INITIALIZED_WITHOUT_PRIMARY_CONSTRUCTOR, SUPERTYPE_INITIALIZED_WITHOUT_PRIMARY_CONSTRUCTOR{JVM}!>C<!SUPERTYPE_INITIALIZED_IN_EXPECTED_CLASS, SUPERTYPE_INITIALIZED_IN_EXPECTED_CLASS{JVM}!>()<!><!>

expect class <!PACKAGE_OR_CLASSIFIER_REDECLARATION!>WithExplicitPrimaryConstructor<!>() : C<!SUPERTYPE_INITIALIZED_IN_EXPECTED_CLASS, SUPERTYPE_INITIALIZED_IN_EXPECTED_CLASS{JVM}!>()<!>

// MODULE: m2-jvm()()(m1-common)
// FILE: jvm.kt
actual class Foo : I, C(), J

actual class <!ACTUAL_WITHOUT_EXPECT!>Bar<!>

actual class WithExplicitPrimaryConstructor : C()
